force-app/main/default/objects/Demo_Case__x/Demo_Case__x.object-meta.xml
<CustomObject>
    <externalDataSource>SGPT_Demo2</externalDataSource>
    <externalName>Case</externalName>
    <label>Demo Case</label>
    <pluralLabel>Demo Cases</pluralLabel>
</CustomObject>