force-app/main/default/objects/Demo_Case__x/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <externalDeveloperName>AssetId</externalDeveloperName>
    <label>Asset ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>