force-app/main/default/objects/Demo_Case__x/fields/BusinessHoursId__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursId__c</fullName>
    <externalDeveloperName>BusinessHoursId</externalDeveloperName>
    <label>Business Hours ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>