force-app/main/default/objects/Demo_Case__x/fields/EntitlementId__c.field-meta.xml
<CustomField>
    <fullName>EntitlementId__c</fullName>
    <externalDeveloperName>EntitlementId</externalDeveloperName>
    <label>Entitlement ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>