force-app/main/default/objects/Demo_Case__x/fields/HasCommentsUnreadByOwner__c.field-meta.xml
<CustomField>
    <fullName>HasCommentsUnreadByOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>HasCommentsUnreadByOwner</externalDeveloperName>
    <label>New Self-Service Comment</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Checkbox</type>
</CustomField>