force-app/main/default/objects/Demo_Case__x/fields/Internal_Account__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account__c</fullName>
    <externalDeveloperName>Internal_Account__c</externalDeveloperName>
    <label>Internal Account</label>
    <length>255</length>
    <referenceTargetField>Account.External_ID__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Demo Cases</relationshipLabel>
    <relationshipName>Demo_Cases</relationshipName>
    <type>IndirectLookup</type>
</CustomField>