force-app/main/default/objects/Demo_Case__x/fields/IsClosedOnCreate__c.field-meta.xml
<CustomField>
    <fullName>IsClosedOnCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsClosedOnCreate</externalDeveloperName>
    <label>Closed When Created</label>
    <type>Checkbox</type>
</CustomField>