force-app/main/default/objects/Demo_Case__x/fields/IsSelfServiceClosed__c.field-meta.xml
<CustomField>
    <fullName>IsSelfServiceClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsSelfServiceClosed</externalDeveloperName>
    <label>Closed by Self-Service User</label>
    <type>Checkbox</type>
</CustomField>