force-app/main/default/objects/Demo_Case__x/fields/IsStopped__c.field-meta.xml
<CustomField>
    <fullName>IsStopped__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsStopped</externalDeveloperName>
    <label>Stopped</label>
    <type>Checkbox</type>
</CustomField>