force-app/main/default/objects/Demo_Case__x/fields/IsVisibleInSelfService__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleInSelfService__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsVisibleInSelfService</externalDeveloperName>
    <label>Visible in Self-Service Portal</label>
    <type>Checkbox</type>
</CustomField>