force-app/main/default/objects/Demo_Case__x/fields/MilestoneStatus__c.field-meta.xml
<CustomField>
    <fullName>MilestoneStatus__c</fullName>
    <externalDeveloperName>MilestoneStatus</externalDeveloperName>
    <label>Milestone Status</label>
    <length>30</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>