force-app/main/default/objects/Demo_Case__x/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <externalDeveloperName>ProductId</externalDeveloperName>
    <label>Product ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>