force-app/main/default/objects/Demo_Case__x/fields/Root_Cause_Reason_c__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause_Reason_c__c</fullName>
    <externalDeveloperName>Root_Cause_Reason__c</externalDeveloperName>
    <label>Root Cause Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>