force-app/main/default/objects/Demo_Case__x/fields/Sentiment_c__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_c__c</fullName>
    <externalDeveloperName>Sentiment__c</externalDeveloperName>
    <label>Sentiment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>