force-app/main/default/objects/Demo_Case__x/fields/SlaExitDate__c.field-meta.xml
<CustomField>
    <fullName>SlaExitDate__c</fullName>
    <externalDeveloperName>SlaExitDate</externalDeveloperName>
    <label>Entitlement Process End Time</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>