force-app/main/default/objects/Demo_Case__x/fields/SlaStartDate__c.field-meta.xml
<CustomField>
    <fullName>SlaStartDate__c</fullName>
    <externalDeveloperName>SlaStartDate</externalDeveloperName>
    <label>Entitlement Process Start Time</label>
    <type>DateTime</type>
</CustomField>