force-app/main/default/objects/Demo_Case__x/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <externalDeveloperName>SourceId</externalDeveloperName>
    <label>Case Source ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>