force-app/main/default/objects/Demo_Case__x/fields/StopStartDate__c.field-meta.xml
<CustomField>
    <fullName>StopStartDate__c</fullName>
    <externalDeveloperName>StopStartDate</externalDeveloperName>
    <label>Stopped Since</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>