force-app/main/default/objects/Demo_Case__x/fields/Summary_Ai_c__c.field-meta.xml
<CustomField>
    <fullName>Summary_Ai_c__c</fullName>
    <externalDeveloperName>Summary_Ai__c</externalDeveloperName>
    <label>Summary(AI)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>