force-app/main/default/objects/Demo_Case__x/fields/Type_of_failure_c__c.field-meta.xml
<CustomField>
    <fullName>Type_of_failure_c__c</fullName>
    <externalDeveloperName>Type_of_failure__c</externalDeveloperName>
    <label>Type of failure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>